force-app/main/default/objects/Source_of_Wealth__c/Source_of_Wealth__c.object-meta.xml
<CustomObject>
    <label>Source of Wealth</label>
    <nameField>
        <displayFormat>SOW-{0}</displayFormat>
        <label>Source of Wealth Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source of Wealth</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>