force-app/main/default/objects/Source_of_Wealth__c/fields/ABN_BusInc__c.field-meta.xml
<CustomField>
    <fullName>ABN_BusInc__c</fullName>
    <description>ABN - Business Income,
Sec - B ABN</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ABN - Business Income</inlineHelpText>
    <label>ABN</label>
    <type>TextArea</type>
</CustomField>