force-app/main/default/objects/Source_of_Wealth__c/fields/ABN_EmpInc__c.field-meta.xml
<CustomField>
    <fullName>ABN_EmpInc__c</fullName>
    <description>ABN -  Employment Income
Sec - A ABN</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ABN -  Employment Income</inlineHelpText>
    <label>ABN</label>
    <type>TextArea</type>
</CustomField>