force-app/main/default/objects/Source_of_Wealth__c/fields/ABN_of_Trust_TrustFundInc__c.field-meta.xml
<CustomField>
    <fullName>ABN_of_Trust_TrustFundInc__c</fullName>
    <description>ABN of Trust - Trust Fund Income
Sec - D ABN of Trust</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ABN of Trust - Trust Fund Income</inlineHelpText>
    <label>ABN of Trust</label>
    <type>TextArea</type>
</CustomField>