force-app/main/default/objects/Source_of_Wealth__c/fields/ABRN_BusInc__c.field-meta.xml
<CustomField>
    <fullName>ABRN_BusInc__c</fullName>
    <description>ABRN - Business Income,Sec - B ABRN</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ABRN - Business Income</inlineHelpText>
    <label>ABRN</label>
    <type>TextArea</type>
</CustomField>