force-app/main/default/objects/Source_of_Wealth__c/fields/ABRN_EmpInc__c.field-meta.xml
<CustomField>
    <fullName>ABRN_EmpInc__c</fullName>
    <description>ABRN - Employment Income
Sec - A ABRN</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ABRN - Employment Income</inlineHelpText>
    <label>ABRN</label>
    <type>TextArea</type>
</CustomField>