force-app/main/default/objects/Source_of_Wealth__c/fields/ACN_BusInc__c.field-meta.xml
<CustomField>
    <fullName>ACN_BusInc__c</fullName>
    <description>ACN - Business Income,
Sec - B ACN</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ACN - Business Income</inlineHelpText>
    <label>ACN</label>
    <type>TextArea</type>
</CustomField>