force-app/main/default/objects/Source_of_Wealth__c/fields/ACN_EmpInc__c.field-meta.xml
<CustomField>
    <fullName>ACN_EmpInc__c</fullName>
    <description>ACN - Employment Income
Sec - A ACN</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ACN - Employment Income</inlineHelpText>
    <label>ACN</label>
    <type>TextArea</type>
</CustomField>