force-app/main/default/objects/Source_of_Wealth__c/fields/Address_where_declaration_was_signed__c.field-meta.xml
<CustomField>
    <fullName>Address_where_declaration_was_signed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address where declaration was signed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>