force-app/main/default/objects/Source_of_Wealth__c/fields/Annual_Income_Before_Tax__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income_Before_Tax__c</fullName>
    <inlineHelpText>Excluding Superannuation</inlineHelpText>
    <label>Annual Income Before Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>