force-app/main/default/objects/Source_of_Wealth__c/fields/Annual_Salary_Before_Tax_AUD__c.field-meta.xml
<CustomField>
    <fullName>Annual_Salary_Before_Tax_AUD__c</fullName>
    <description>Annual Salary Before Tax (excluding Superannuation) (AUD) - Employment Income</description>
    <inlineHelpText>Annual Salary Before Tax (excluding Superannuation) (AUD) - Employment Income</inlineHelpText>
    <label>Annual Salary Before Tax  (AUD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>