force-app/main/default/objects/Source_of_Wealth__c/fields/Annual_Salary_Before_Tax_EmpInc__c.field-meta.xml
<CustomField>
    <fullName>Annual_Salary_Before_Tax_EmpInc__c</fullName>
    <description>Annual Salary Before Tax (excluding Superannuation) (AUD) - Employment Income
Sec - A Annual Salary Before Tax</description>
    <inlineHelpText>Annual Salary Before Tax (excluding Superannuation) (AUD) - Employment Income</inlineHelpText>
    <label>Annual Salary Before Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>