force-app/main/default/objects/Source_of_Wealth__c/fields/Asset_Type_of_Inheritance_InhInc__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type_of_Inheritance_InhInc__c</fullName>
    <description>Sec - C Asset Type of Inheritance</description>
    <label>Asset Type of Inheritance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Shares</fullName>
            </value>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>Digital Currencies</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>