force-app/main/default/objects/Source_of_Wealth__c/fields/Average_Annual_Business_Income_BusInc__c.field-meta.xml
<CustomField>
    <fullName>Average_Annual_Business_Income_BusInc__c</fullName>
    <description>Average Annual Business Income derived by you from business over last 3 years - Business Income
Sec - B Average Annual Business Income</description>
    <inlineHelpText>Average Annual Business Income derived by you from business over last 3 years - Business Income</inlineHelpText>
    <label>Average Annual Business Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>