force-app/main/default/objects/Source_of_Wealth__c/fields/Bulk_Update_for_SOW_Data_fix__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Update_for_SOW_Data_fix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk Update for SOW Data fix</label>
    <type>Checkbox</type>
</CustomField>