force-app/main/default/objects/Source_of_Wealth__c/fields/Business_Employer_Name_EmpInc__c.field-meta.xml
<CustomField>
    <fullName>Business_Employer_Name_EmpInc__c</fullName>
    <description>Job title -  Business/Employer Name
Sec - A Business/Employer Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Job title -  Business/Employer Name</inlineHelpText>
    <label>Business/Employer Name</label>
    <type>TextArea</type>
</CustomField>