force-app/main/default/objects/Source_of_Wealth__c/fields/Business_Identification_Option_BusInc__c.field-meta.xml
<CustomField>
    <fullName>Business_Identification_Option_BusInc__c</fullName>
    <description>Sec - B Business Identification Option</description>
    <label>Business Identification Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Identification_Option</valueSetName>
    </valueSet>
</CustomField>