force-app/main/default/objects/Source_of_Wealth__c/fields/Business_Identification_Option_EmpInc__c.field-meta.xml
<CustomField>
    <fullName>Business_Identification_Option_EmpInc__c</fullName>
    <description>Business Identification Option (if Self - Employed) -  Employment Income
Sec - A Business Identification Option</description>
    <inlineHelpText>Business Identification Option (if Self - Employed) -  Employment Income</inlineHelpText>
    <label>Business Identification Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Identification_Option</valueSetName>
    </valueSet>
</CustomField>