force-app/main/default/objects/Source_of_Wealth__c/fields/Business_Income__c.field-meta.xml
<CustomField>
    <fullName>Business_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Income</label>
    <type>Checkbox</type>
</CustomField>