force-app/main/default/objects/Source_of_Wealth__c/fields/Business_Name_BusInc__c.field-meta.xml
<CustomField>
    <fullName>Business_Name_BusInc__c</fullName>
    <description>Business Name - Business Income
Sec - B Business Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Business Name - Business Income</inlineHelpText>
    <label>Business Name</label>
    <type>TextArea</type>
</CustomField>