force-app/main/default/objects/Source_of_Wealth__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patron</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Source of Wealth</relationshipLabel>
    <relationshipName>Source_of_Wealth</relationshipName>
    <type>Lookup</type>
</CustomField>