force-app/main/default/objects/Source_of_Wealth__c/fields/Country_of_Incorporation_BusInc__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Incorporation_BusInc__c</fullName>
    <description>Country of Incorporation - Business Income
Sec - B Country of Incorporation</description>
    <inlineHelpText>Country of Incorporation - Business Income</inlineHelpText>
    <label>Country of Incorporation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Counttry</valueSetName>
    </valueSet>
</CustomField>