force-app/main/default/objects/Source_of_Wealth__c/fields/Current_Value_of_Inheritance_InhInc__c.field-meta.xml
<CustomField>
    <fullName>Current_Value_of_Inheritance_InhInc__c</fullName>
    <description>Current Value of Inheritance - Inheritance Income
Sec - C Current Value of Inheritance</description>
    <inlineHelpText>Current Value of Inheritance - Inheritance Income</inlineHelpText>
    <label>Current Value of Inheritance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>