force-app/main/default/objects/Source_of_Wealth__c/fields/Current_Value_of_Trust_TrustFundInc__c.field-meta.xml
<CustomField>
    <fullName>Current_Value_of_Trust_TrustFundInc__c</fullName>
    <description>Current Value of Trust  - Trust Fund Income
Sec - D Current Value of Trust</description>
    <inlineHelpText>Current Value of Trust  - Trust Fund Income</inlineHelpText>
    <label>Current Value of Trust</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>