force-app/main/default/objects/Source_of_Wealth__c/fields/Do_you_have_a_website_BusInc__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_website_BusInc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you have a website - Business Income
Sec - B Do you have a website ?</description>
    <inlineHelpText>Do you have a website - Business Income</inlineHelpText>
    <label>Do you have a website ?</label>
    <type>Checkbox</type>
</CustomField>