force-app/main/default/objects/Source_of_Wealth__c/fields/Employer_Primary_Address_EmpInc__c.field-meta.xml
<CustomField>
    <fullName>Employer_Primary_Address_EmpInc__c</fullName>
    <description>Employer Primary Address - Employment Income
Sec - A Employer Primary Address</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Employer Primary Address - Employment Income</inlineHelpText>
    <label>Employer Primary Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>