force-app/main/default/objects/Source_of_Wealth__c/fields/Employment_Income__c.field-meta.xml
<CustomField>
    <fullName>Employment_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employment Income</label>
    <type>Checkbox</type>
</CustomField>