force-app/main/default/objects/Source_of_Wealth__c/fields/fileuploaded_to_trackvia__c.field-meta.xml
<CustomField>
    <fullName>fileuploaded_to_trackvia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>fileuploaded to trackvia</label>
    <type>Checkbox</type>
</CustomField>