force-app/main/default/objects/Source_of_Wealth__c/fields/Gambling_Winnings_past_5_years__c.field-meta.xml
<CustomField>
    <fullName>Gambling_Winnings_past_5_years__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gambling Winnings (past 5 years)</label>
    <type>Checkbox</type>
</CustomField>