force-app/main/default/objects/Source_of_Wealth__c/fields/Gifts_Savings_Government_Benefits_or_o__c.field-meta.xml
<CustomField>
    <fullName>Gifts_Savings_Government_Benefits_or_o__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Gifts, Savings, Government Benefits or other Assets(s)</inlineHelpText>
    <label>Gifts/Savings/Government Benefits</label>
    <type>Checkbox</type>
</CustomField>