force-app/main/default/objects/Source_of_Wealth__c/fields/Inheritance_income__c.field-meta.xml
<CustomField>
    <fullName>Inheritance_income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inheritance</label>
    <type>Checkbox</type>
</CustomField>