force-app/main/default/objects/Source_of_Wealth__c/fields/Inheritance_Received_InhInc__c.field-meta.xml
<CustomField>
    <fullName>Inheritance_Received_InhInc__c</fullName>
    <description>Please Specify the in which the inheritance was received - Inheritance income
Sec - C Inheritance Received</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please Specify the in which the inheritance was received - Inheritance income</inlineHelpText>
    <label>Inheritance Received</label>
    <type>Date</type>
</CustomField>