force-app/main/default/objects/Source_of_Wealth__c/fields/International_Business_ID_busInc__c.field-meta.xml
<CustomField>
    <fullName>International_Business_ID_busInc__c</fullName>
    <description>International Business ID - Business Income
Sec - B International Business ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>International Business ID - Business Income</inlineHelpText>
    <label>International Business ID</label>
    <type>TextArea</type>
</CustomField>