force-app/main/default/objects/Source_of_Wealth__c/fields/International_Business_ID_EmpInc__c.field-meta.xml
<CustomField>
    <fullName>International_Business_ID_EmpInc__c</fullName>
    <description>International Business ID - Employment Income
Sec - A International Business ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>International Business ID - Employment Income</inlineHelpText>
    <label>International Business ID</label>
    <type>TextArea</type>
</CustomField>