force-app/main/default/objects/Source_of_Wealth__c/fields/International_Business_ID_TrustFundInc__c.field-meta.xml
<CustomField>
    <fullName>International_Business_ID_TrustFundInc__c</fullName>
    <description>International Business ID - Trust Fund Income
Sec - D International Business ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>International Business ID - Trust Fund Income</inlineHelpText>
    <label>International Business ID</label>
    <type>TextArea</type>
</CustomField>