force-app/main/default/objects/Source_of_Wealth__c/fields/isSubmitted__c.field-meta.xml
<CustomField>
    <fullName>isSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be marked once the application is submitted by the the user from form assembly.</description>
    <label>isSubmitted</label>
    <type>Checkbox</type>
</CustomField>