force-app/main/default/objects/Source_of_Wealth__c/fields/Job_Title_EmpInc__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_EmpInc__c</fullName>
    <description>Job title -  Employment Income
Sec - A Job Title</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Job title -  Employment Income</inlineHelpText>
    <label>Job Title</label>
    <type>TextArea</type>
</CustomField>