force-app/main/default/objects/Source_of_Wealth__c/fields/Length_of_Employment_Month_EmpInc__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Employment_Month_EmpInc__c</fullName>
    <description>Sec - A Length of Employment (Month)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Length of Employment (Month)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>