force-app/main/default/objects/Source_of_Wealth__c/fields/Name_of_Trust_TrustFundInc__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Trust_TrustFundInc__c</fullName>
    <description>Name of Trust - Trust Fund Income
Sec - D Name of Trust</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of Trust - Trust Fund Income</inlineHelpText>
    <label>Name of Trust</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>