force-app/main/default/objects/Source_of_Wealth__c/fields/Nature_of_Business_Activity_BusInc__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Business_Activity_BusInc__c</fullName>
    <description>Nature of Business Activity - Business Income
Sec - B  Nature of Business Activity</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Nature of Business Activity - Business Income</inlineHelpText>
    <label>Nature of Business Activity</label>
    <type>TextArea</type>
</CustomField>