force-app/main/default/objects/Source_of_Wealth__c/fields/Nature_of_employment__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_employment__c</fullName>
    <label>Nature of Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nature_of_Employment</valueSetName>
    </valueSet>
</CustomField>