force-app/main/default/objects/Source_of_Wealth__c/fields/Net_Worth_More_than_2_Million_AUD__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth_More_than_2_Million_AUD__c</fullName>
    <inlineHelpText>Please provide the value if your Personal Net Wealth is more than $2 million</inlineHelpText>
    <label>Net Wealth is more than $1,999,999</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>