force-app/main/default/objects/Source_of_Wealth__c/fields/Other_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Name__c</fullName>
    <description>Any other names (s) you are, or have been known by</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Any other names (s) you are, or have been known by</inlineHelpText>
    <label>Other Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>