force-app/main/default/objects/Source_of_Wealth__c/fields/Other_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Other_Occupation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>