force-app/main/default/objects/Source_of_Wealth__c/fields/Others_InhInc__c.field-meta.xml
<CustomField>
    <fullName>Others_InhInc__c</fullName>
    <description>Others - Inheritance Income
Sec - C Others</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Others - Inheritance Income</inlineHelpText>
    <label>Others</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>