force-app/main/default/objects/Source_of_Wealth__c/fields/Ownership_Proportion_BusInc__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Proportion_BusInc__c</fullName>
    <description>Ownership Proportion - Business Income
Sec - B Ownership Proportion</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Ownership Proportion - Business Income</inlineHelpText>
    <label>Ownership Proportion</label>
    <type>TextArea</type>
</CustomField>