force-app/main/default/objects/Source_of_Wealth__c/fields/Pension_Income__c.field-meta.xml
<CustomField>
    <fullName>Pension_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Government Payments,Superannuation (or equivalent)</inlineHelpText>
    <label>Pension</label>
    <type>Checkbox</type>
</CustomField>