force-app/main/default/objects/Source_of_Wealth__c/fields/Personal_Net_Wealth__c.field-meta.xml
<CustomField>
    <fullName>Personal_Net_Wealth__c</fullName>
    <inlineHelpText>Net value of your assets less any money owned</inlineHelpText>
    <label>Personal Net Wealth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Personal_Net_Wealth</valueSetName>
    </valueSet>
</CustomField>