force-app/main/default/objects/Source_of_Wealth__c/fields/Personal_Real_State_income__c.field-meta.xml
<CustomField>
    <fullName>Personal_Real_State_income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Real State</label>
    <type>Checkbox</type>
</CustomField>