force-app/main/default/objects/Source_of_Wealth__c/fields/Relationship_to_the_trust_TrustFundInc__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_the_trust_TrustFundInc__c</fullName>
    <description>Please Specify your relationship to the trust - Trust Fund Income
Sec - D Relationship to the trust</description>
    <inlineHelpText>Please Specify your relationship to the trust - Trust Fund Income</inlineHelpText>
    <label>Relationship to the trust</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Relationship_to_the_Trust</valueSetName>
    </valueSet>
</CustomField>