force-app/main/default/objects/Source_of_Wealth__c/fields/Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>PO Box is not accepted</inlineHelpText>
    <label>Residential Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>