force-app/main/default/objects/Source_of_Wealth__c/fields/Send_SOW_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_SOW_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SOW Email?</label>
    <type>Checkbox</type>
</CustomField>