force-app/main/default/objects/Source_of_Wealth__c/fields/SOW_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>SOW_Form_Link__c</fullName>
    <formula>HYPERLINK($Label.SOW_Form_Link + &apos;tfa_1585=&apos; +  CASESAFEID(Contact__r.Id) + &apos;&amp;tfa_1584=&apos; +  CASESAFEID(Id), &apos;SOW Form&apos;)</formula>
    <label>SOW Form Link</label>
    <type>Text</type>
</CustomField>