force-app/main/default/objects/Source_of_Wealth__c/fields/The_Star_Club_Membership_Id__c.field-meta.xml
<CustomField>
    <fullName>The_Star_Club_Membership_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>The Star Club Membership Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>