force-app/main/default/objects/Source_of_Wealth__c/fields/Trust_Fund_income__c.field-meta.xml
<CustomField>
    <fullName>Trust_Fund_income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trust Fund</label>
    <type>Checkbox</type>
</CustomField>