force-app/main/default/objects/Source_of_Wealth__c/fields/Website_BusInc__c.field-meta.xml
<CustomField>
    <fullName>Website_BusInc__c</fullName>
    <description>Website  - Business Income
Sec - B Website</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Website  - Business Income</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>