force-app/main/default/objects/Source_of_Wealth__c/listViews/Source_of_Wealth.listView-meta.xml
<ListView>
    <fullName>Source_of_Wealth</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Source of Wealth</label>
</ListView>